--- a/src/components/Home/HeroSection.css
+++ b/src/components/Home/HeroSection.css
@@ -1,3 +1,89 @@
+button {
+  padding: 10px 15px;
+  border-radius: 20px;
+  outline: none;
+  border: 1px solid #ebc430;
+  cursor: pointer;
+  color: #ebc430;
+  background: none;
+  font-weight: bold;
+}
+
+.white {
+  background: white;
+}
+.black {
+  background: #1c1f24;
+}
+
+.navbar {
+  width: 100%;
+  height: 79px;
+  background-color: #272a35;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 20px;
+  position: relative;
+  z-index: 10;
+}
+
+.inputSection {
+  width: 20%;
+  display: flex;
+  align-items: center;
+}
+.inputSection input {
+  height: 40px;
+  width: 80%;
+  padding: 15px 45px;
+  border: none;
+  background: #1c1f24;
+  border-radius: 20px;
+  color: #ebc430;
+}
+.inputSection .icon {
+  color: #ebc430;
+  font-size: 1.4rem;
+  font-weight: bold;
+  position: relative;
+  left: -45px;
+  cursor: pointer;
+}
+
+.logoSection {
+  width: 20%;
+  position: relative;
+  /* display: flex; */
+}
+.logoSection img {
+  width: 60%;
+  position: relative;
+  /* top: 20px;
+  z-index: 10; */
+  margin-left: 10px;
+}
+/* .trapezoid {
+  background: #272a35;
+  width: 70%;
+  height: 300px;
+  position: absolute;
+  top: 115px;
+  left: 0;
+  clip-path: polygon(0 0, 100% 0, 65% 13%, 29% 13%);
+} */
+
+.navButtonsSection {
+  width: 40%;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.depositBtn {
+  background-color: #ebc430;
+  color: black;
+}
+
 .heroBg {
   width: 100%;
   min-height: 350px;
@@ -35,6 +121,14 @@
 .casinoBtn p {
   font-size: 1.2rem;
 }
+.exchangeBtnDark,
+.casinoBtnColorDark {
+  color: #ebc430;
+}
+.exchangeBtnLight,
+.casinoBtnLight {
+  color: black;
+}
 .gameType {
   width: 90%;
   display: grid;
@@ -48,7 +142,12 @@
   justify-content: center;
   align-items: center;
   gap: 5px;
+}
+.gameTypeDark {
   color: white;
+}
+.gameTypeLight {
+  color: black;
 }
 
 .teenPatigame {
@@ -231,6 +330,13 @@
   
 } */
 
+.footerDark {
+  color: #ebc430;
+}
+.footerLight {
+  color: #1c1f24;
+}
+
 .footerDiv {
   border-top: 1px solid #ebc430;
   border-bottom: 1px solid #ebc430;
@@ -246,7 +352,7 @@
   margin: auto;
 }
 .footerDiv1 {
-  color: #ebc430;
+  /* color: #ebc430; */
   display: flex;
   flex-direction: column;
   gap: 15px;
@@ -275,17 +381,17 @@
   display: flex;
   flex-direction: column;
   gap: 8px;
-  color: #ebc430;
+  /* color: #ebc430; */
   list-style: none;
 }
 .footerDiv2 ul h3,
 .footerDiv3 ul h3 {
   margin-bottom: 25px;
 }
-.footerDiv2 ul li,
+/* .footerDiv2 ul li,
 .footerDiv3 ul li {
   color: white;
-}
+} */
 
 .footerDiv4 {
   display: flex;
@@ -294,17 +400,24 @@
   padding-top: 40px;
 }
 
-.footerDiv4 h3 {
-  color: #ebc430;
-}
 .socialIcon {
   display: flex;
   gap: 15px;
 }
-.paymentMethod {
+
+.paymentDark {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 15px;
+  background: #1c1f24;
+}
+.paymentLight {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 15px;
+  padding: 20px;
+  background: #1c1f24;
+  border-radius: 10px;
 }
 .disclaimer {
   text-align: center;
@@ -329,6 +442,14 @@
   color: #ebc430;
 }
 
+@media (max-width: 960px) {
+  .inputSection {
+    width: 25%;
+  }
+  .navButtonsSection {
+    width: 55%;
+  }
+}
 @media (max-width: 815px) {
   .cricketContent1 {
     flex-direction: column;
@@ -346,6 +467,20 @@
 }
 
 @media (max-width: 712px) {
+  .inputSection {
+    display: none;
+  }
+  .navButtonsSection button {
+    font-size: 10px;
+  }
+  .navButtonsSection {
+    width: 80%;
+    justify-content: right;
+    gap: 5px;
+  }
+  .logoSection img {
+    width: 90%;
+  }
   .heroBg img {
     width: 90%;
     height: 250px;
@@ -368,6 +503,15 @@
 }
 
 @media (max-width: 448px) {
+  .btn_last {
+    display: none;
+  }
+  .navButtonsSection button {
+    padding: 9px 6px;
+  }
+  .logoSection img {
+    width: 100%;
+  }
   .heroBg {
     min-height: 200px;
     padding-top: 20px;
