--- a/src/components/Home/HeroSection.css
+++ b/src/components/Home/HeroSection.css
@@ -163,7 +163,7 @@ button {
 }
 .teenPatigame div {
   padding-bottom: 30px;
-  background-color: red;
+  /* background-color: red; */
 }
 .teenPatigame div img {
   width: 300px;
@@ -293,25 +293,32 @@ button {
 
 .card1 {
   width: 100%;
-  padding: 3px;
+  background: rgba(236, 102, 24, 0.3);
   border-radius: 10px;
-  /* border: 1px ridge #ec6618; */
-  background: rgba(236, 102, 24, 0.4);
+  padding: 3px;
 }
 .card1 img {
-  border-radius: 10px 10px 0 0;
   width: 100%;
+  border-radius: 10px 10px 0 0;
 }
 .card1 div:last-child {
-  margin-top: -3px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background: #272a35;
   color: #a2a3a5;
+  background: #272a35;
   padding: 5px;
-  position: relative;
-  z-index: 10;
+}
+.card1HP {
+  margin-top: -3px;
+  margin-bottom: 1px;
+  border-radius: 0 0 10px 10px;
+}
+.card1HP h3 {
+  font-size: 18px;
+}
+.card1HP p {
+  font-size: 12px;
 }
 
 .sportBook .sportCard {
@@ -495,7 +502,8 @@ button {
     gap: 5px;
   }
   .logoSection img {
-    width: 90%;
+    height: 120px;
+    width: 120px;
   }
   .heroBg img {
     width: 90%;
@@ -506,11 +514,15 @@ button {
   }
   .teenPatigame div {
     padding-bottom: 30px;
-    background: red;
+    /* background: red; */
   }
   .teenPatigame div img {
     width: 130px;
     border-radius: 15px;
+  }
+  .card1HP h3,
+  .card1HP p {
+    font-size: 12px;
   }
   .cricketScore div {
     height: 25px;
