--- a/src/components/Home/HeroSection.css
+++ b/src/components/Home/HeroSection.css
@@ -29,13 +29,13 @@ button {
 }
 
 .inputSection {
-  width: 20%;
+  width: 25%;
   display: flex;
   align-items: center;
 }
 .inputSection input {
   height: 40px;
-  width: 80%;
+  width: 100%;
   padding: 15px 45px;
   border: none;
   background: #1c1f24;
@@ -111,14 +111,22 @@ button {
   justify-content: space-between;
   margin: auto;
 }
+.exchange-casino div {
+  background: rgba(236, 102, 24, 0.687);
+  border-radius: 20px;
+  padding: 1.3px;
+  width: 49%;
+}
 .exchangeBtn,
 .casinoBtn {
-  width: 49%;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 3px;
-  border: 1px solid #ec6618;
+  border: none;
+  background: #272a35;
+  /* border: 1px solid #ec6618; */
 }
 .exchangeBtn img,
 .casinoBtn img {
@@ -134,27 +142,41 @@ button {
 }
 .exchangeBtnLight,
 .casinoBtnLight {
-  color: black;
+  color: white;
+  /* background-color: white; */
 }
 .gameType {
   width: 90%;
   display: grid;
   grid-template-columns: repeat(6, 1fr);
-  gap: 15px;
+  gap: 10px;
   margin: 25px auto;
+  overflow-x: scroll;
+  scrollbar-width: none;
+}
+.gameType div {
+  background: rgba(236, 102, 24, 0.687);
+  border-radius: 20px;
+  padding: 1px;
+  height: 85px;
+  width: 190px;
 }
 .gameType button {
+  width: 100%;
+  height: 100%;
   border: 1px solid #ec6618;
+  background: #272a35;
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 5px;
+  font-size: 1rem;
 }
 .gameTypeDark {
   color: white;
 }
 .gameTypeLight {
-  color: black;
+  color: white;
 }
 
 .teenPatigame {
@@ -166,7 +188,8 @@ button {
 
   gap: 15px;
   padding: 25px 20px;
-  overflow-x: auto;
+  overflow-x: scroll;
+  scrollbar-width: none;
 }
 .teenPatigame div {
   padding-bottom: 30px;
@@ -190,10 +213,11 @@ button {
   background: #272a35;
   color: white;
   display: flex;
+  align-items: center;
   justify-content: left;
   gap: 5px;
   padding: 20px;
-  border-radius: 20px;
+  /* border-radius: 20px; */
 }
 .cricketContent {
   display: flex;
@@ -205,7 +229,8 @@ button {
 .cricketContent1 {
   display: flex;
   /* flex-wrap: wrap; */
-  gap: 10px;
+  /* gap: 10px; */
+  justify-content: space-between;
   /* background: white; */
 }
 .inPlay {
@@ -220,8 +245,11 @@ button {
 }
 .inPlayBtn {
   width: 80px;
-  height: 30px;
+  height: 50px;
   padding: 5px 8px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background-color: #03a155;
   color: white;
   border-radius: 5px;
@@ -235,7 +263,7 @@ button {
   /* background: green; */
 }
 .cricketScore div {
-  height: 35px;
+  height: 50px;
   width: 60px;
   padding: 5px 8px;
   color: black;
@@ -260,6 +288,12 @@ button {
   gap: 25px;
   margin: auto;
   padding: 20px 0;
+}
+.sportCard .div {
+  background: rgba(236, 102, 24, 0.687);
+  padding: 1px;
+  border-radius: 20px;
+  width: 200px;
 }
 .providerImg {
   display: grid;
@@ -314,7 +348,7 @@ button {
 .card1 {
   width: 100%;
   /* width: 35%; */
-  background: rgba(236, 102, 24, 0.3);
+  background: rgba(236, 102, 24, 0.687);
   border-radius: 10px;
   padding: 3px;
 }
@@ -356,8 +390,9 @@ button {
   align-items: center;
   color: white;
   gap: 5px;
-  height: 165px;
-  width: 165px;
+  /* height: 165px;
+  width: 165px; */
+  width: 100%;
   padding: 20px 0;
   border: 1px solid #ec6618;
   background-color: #272a35;
@@ -391,7 +426,7 @@ button {
   border-bottom: 1px solid #ebc430; */
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-  grid-gap: 20px;
+  grid-gap: 30px;
   padding: 20px 20px;
   margin: auto;
 }
@@ -400,6 +435,7 @@ button {
   display: flex;
   flex-direction: column;
   gap: 15px;
+  /* margin-left: 500px; */
 }
 .secureBox {
   display: flex;
@@ -415,10 +451,15 @@ button {
 }
 .responsibleGame img {
   width: 40px;
+  /* margin-left: 400px; */
 }
-.footerDiv2,
+.footerDiv2 {
+  padding-top: 40px;
+  padding-left: 60px;
+}
 .footerDiv3 {
   padding-top: 40px;
+  padding-left: 60px;
 }
 .footerDiv2 ul,
 .footerDiv3 ul {
@@ -499,9 +540,20 @@ button {
 @media (max-width: 815px) {
   .cricketContent1 {
     flex-direction: column;
+    gap: 12px;
   }
   .inPlay {
     width: 100%;
+  }
+  .gameType div {
+    width: 120px;
+    height: 65px;
+  }
+  .gameType div button img {
+    height: 10px;
+  }
+  .gameType div button {
+    font-size: 10px;
   }
   .inPlay p {
     font-size: 12px;
@@ -531,8 +583,8 @@ button {
     gap: 5px;
   }
   .logoSection img {
-    height: 150px;
-    width: 300px;
+    height: 120px;
+    width: 54px;
   }
   .heroBg img {
     width: 90%;
@@ -540,6 +592,14 @@ button {
   }
   .gameType {
     overflow: auto;
+  }
+  .gameType div {
+    width: 120px;
+    height: 65px;
+  }
+  .gameType div button {
+    font-size: 10px;
+    gap: 2px;
   }
   .teenPatigame div {
     padding-bottom: 30px;
@@ -553,6 +613,9 @@ button {
   .sportCard1 {
     width: 120px;
     height: 120px;
+  }
+  .sportCard .div {
+    width: 100%;
   }
   .sportCard1 img {
     width: 50px;
@@ -581,6 +644,12 @@ button {
   }
 }
 
+@media (max-width: 522px) {
+  .footerDiv2,
+  .footerDiv3 {
+    padding-left: 0;
+  }
+}
 @media (max-width: 484px) {
   .card1 {
     width: 140px;
