--- a/src/components/Home/HeroSection.css
+++ b/src/components/Home/HeroSection.css
@@ -350,7 +350,7 @@ button {
   /* width: 35%; */
   background: rgba(236, 102, 24, 0.687);
   border-radius: 10px;
-  padding: 3px;
+  padding: 1.3px;
 }
 .card1 img {
   width: 100%;
@@ -689,5 +689,11 @@ button {
   }
   .disclaimer {
     width: 80%;
+  }
+}
+
+@media (max-width: 360px) {
+  .exchange-casino div button {
+    height: 100%;
   }
 }
