--- a/src/components/Home/HeroSection.css
+++ b/src/components/Home/HeroSection.css
@@ -267,7 +267,7 @@ button {
   width: 60px;
   padding: 5px 8px;
   color: black;
-  font-weight: bold;
+  /* font-weight: bold; */
   border-radius: 5px;
   display: flex;
   justify-content: center;
@@ -293,7 +293,7 @@ button {
   width: 90%;
   display: flex;
   flex-direction: column;
-  gap: 25px;
+  gap: 10px;
   margin: auto;
   padding: 20px 0;
 }
@@ -309,10 +309,14 @@ button {
   grid-template-columns: repeat(6, 1fr);
   grid-gap: 10px;
 }
-.providerContent,
 .virtualSportContent {
   display: flex;
   justify-content: flex-start;
+  align-items: center;
+}
+.providerContent {
+  display: flex;
+  justify-content: center;
   align-items: center;
 }
 /* .providerContent p,
@@ -359,7 +363,7 @@ button {
   grid-template-columns: repeat(4, 1fr);
   justify-content: space-between;
 
-  gap: 15px;
+  gap: 3px;
   padding: 25px 0;
   overflow-x: auto;
 }
@@ -399,7 +403,8 @@ button {
   display: grid;
   /* grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); */
   grid-template-columns: repeat(5, 1fr);
-  grid-gap: 10px;
+  grid-gap: 1px;
+  padding: 0 30px;
   overflow: auto;
 }
 .sportCard1 {
@@ -409,8 +414,6 @@ button {
   align-items: center;
   color: white;
   gap: 5px;
-  /* height: 165px;
-  width: 165px; */
   width: 100%;
   padding: 20px 0;
   border: 1px solid #ec6618;
@@ -649,12 +652,15 @@ button {
   .card1HP p {
     font-size: 6px;
   }
+  .cricketScore {
+    gap: 2px;
+  }
   .cricketScore div {
     height: 25px;
-    width: 30px;
+    width: 40px;
     padding: 5px 8px;
     color: black;
-    font-weight: bold;
+    /* font-weight: bold; */
     border-radius: 5px;
     display: flex;
     justify-content: center;
